--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SIGHTENGINE_USER=1136711838
-SIGHTENGINE_SECRET=GrfXVsyYV6yqUTgcusvBFZBVNntrammf
+SIGHTENGINE_USER=butngi
+SIGHTENGINE_SECRET=diri sab
 # LOAD_LOCAL_EFFICIENTNET=true
