--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SIGHTENGINE_USER=butngi
-SIGHTENGINE_SECRET=diri sab
+SIGHTENGINE_USER=alisid
+SIGHTENGINE_SECRET=kani sab
 # LOAD_LOCAL_EFFICIENTNET=true
